alignment issue is fixed as per requirement

--- a/src/cart/components/BankOffer.css
+++ b/src/cart/components/BankOffer.css
@@ -1,7 +1,7 @@
 .base {
   width: 100%;
   height: auto;
-  padding: 20px 15px;
+  padding: 20px 28px;
 }
 .bankName {
   width: auto;
