--- a/src/pdp/components/SizeQuantitySelect.css
+++ b/src/pdp/components/SizeQuantitySelect.css
@@ -46,19 +46,19 @@
   composes: select;
   padding-left: 10px;
 }
-.inLineButton{
-  display:inline-block;
-  vertical-align:top;
-  margin-left:15px;
+.inLineButton {
+  width: auto;
+  position: absolute;
+  top: 0;
+  right: 20px;
 }
 
 @media screen and (min-width: 1025px) {
-  .header{
-    padding:0;
+  .header {
+    padding: 0;
   }
-  .selectHolder{
-    padding:0;
-    max-width:360px;
+  .selectHolder {
+    padding: 0;
+    max-width: 360px;
   }
-
 }
